--- a/src/documents/referenzen/tages-anzeiger-wm.html
+++ b/src/documents/referenzen/tages-anzeiger-wm.html
@@ -60,8 +60,8 @@ slider:
             <p>Ansprechperson: Samuel Reber<br>
                Telefon +41 44 248 41 11</p>
 
-            <p>Link: <a href="http://tamedia.renuo.ch/stats/" target="_blank">http://tamedia.renuo.ch/stats/</a></p>
-			<p>Weil die WM nicht mehr läuft, ist die original Referenz nicht mehr online. Der oben stehende Link zeigt die Applikation auf unserem Server.</p>
+            <p>Link: <a href="http://files.newsnetz.ch/archive/stats/" target="_blank">http://tamedia.renuo.ch/stats/</a></p>
+			<p>Weil die WM nicht mehr läuft, ist die original Referenz nicht mehr online. Der oben stehende Link zeigt die Applikation auf dem Server der Tamedia.</p>
 			<p>Die Partnerschaft war ein einmaliger Auftrag und dauerte von Mai 2014 bis Juli 2014.</p>
 
             <div><img src="/images/tamedia/tamedia_logo.png" alt="Logo Tamedia"></div>
