--- a/src/documents/referenzen/tages-anzeiger-wm.html
+++ b/src/documents/referenzen/tages-anzeiger-wm.html
@@ -1,7 +1,7 @@
 ---
 title: Multidevice-Widget
-box_name: Multidevice-Widget
-box_description: anlässlich der WM 2014 für Tamedia AG
+box_name: Tamedia AG
+box_description: Multidevice-Widget anlässlich der WM 2014
 short_description: anlässlich der WM 2014 für Tamedia AG
 image_path: /images/tamedia/tamedia.png
 layout: project
