--- a/src/documents/referenzen/tages-anzeiger-wahlboerse.html
+++ b/src/documents/referenzen/tages-anzeiger-wahlboerse.html
@@ -1,7 +1,7 @@
 ---
-title: Wahlbörse-Widget
-box_name: Wahlbörse-Widget anlässlich der RR-, KR-, NR- und SR-Wahl 2015
-box_description: - hunderttausende Besucher pro Tag
+title: Wahlbörse-Widget anlässlich der RR-, KR-, NR- und SR-Wahl 2015
+box_name: Tamedia AG
+box_description: Wahlbörse-Widget
 short_description: - hunderttausende Besucher pro Tag
 image_path: /images/tamedia/tamedia-wahlboerse.jpg
 layout: project
