change HMS deadline dates

--- a/src/documents/jobs/151218-hms-praktikum.html
+++ b/src/documents/jobs/151218-hms-praktikum.html
@@ -60,7 +60,7 @@ workload: 100%
   <div class="span12">
     <h3>Next Steps</h3>
     <p>Sende Deine Bewerbungsunterlagen (Lebenslauf, Motivationssschreiben) an <a href="mailto:jobs@renuo.ch">jobs@renuo.ch</a>.</p>
-    <p><b>Bewerbungsfrist: 14. Februar 2016</b></p>
+    <p><b>Bewerbungsfrist: 17. April 2016</b></p>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -70,23 +70,23 @@ workload: 100%
       </thead>
       <tbody>
         <tr>
-          <td>18. Dezember 2015 - 14. Februar 2016</td>
+          <td>15. März 2016 - 17. April 2016</td>
           <td>Wir warten auf Deine Bewerbung!</td>
         </tr>
         <tr>
-          <td>16. Februar 2016</td>
+          <td>18. April 2016</td>
           <td>Du erhältst eine Mail, ob Du zum Bewerbungsgespräch eingeladen wirst</td>
         </tr>
         <tr>
-          <td>29. Februar - 4. März 2016</td>
+          <td>25. April - 6. Mai 2016</td>
           <td>Du nimmst am Bewerbungsgespräch teil bei uns in Wallisellen</td>
         </tr>
         <tr>
-          <td>14. - 18. März 2016</td>
+          <td>9. - 13. Mai 2016</td>
           <td>Wir laden Dich zum Assessment ein</td>
         </tr>
         <tr>
-          <td>25. März 2016</td>
+          <td>16. Mai 2016</td>
           <td>Du unterschreibst hoffentlich Deinen Praktikumsvertrag für das Jahr Juli 2016 - Juli 2017</td>
         </tr>
       </tbody>
