fix error in title

--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -1,6 +1,6 @@
 ﻿--- yaml
 layout: 'page'
-title: 'RENUO GET TOGETHER'S'
+title: 'RENUO GET TOGETHERS'
 description: 'Melden Sie sich und Ihre Mitarbeitenden jetzt an'
 position:
 ---
