--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -10,6 +10,7 @@ position:
         <div class="page-header">
             <h1>RENUO GET TOGETHERS
                 <small>2016</small>
+                </div>
       <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu unseren neuen RENUO GET TOGETHER’S 2016 ein!</p>
 <p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich. Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
 <p>Bitte melden Sie sich und Ihre Begleitung bis eine Woche vor dem jeweiligen Event an. Bei Fragen kontaktieren Sie uns unter info@renuo.ch.</p>
