--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -11,10 +11,25 @@ position:
             <h1>RENUO GET TOGETHERS
                 <small>2016</small>
                 </div>
-      <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu unseren neuen RENUO GET TOGETHER’S 2016 ein!</p>
+      <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu den RENUO GET TOGETHERS 2016 ein!</p>
 <p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich. Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
 <p>Bitte melden Sie sich und Ihre Begleitung bis eine Woche vor dem jeweiligen Event an. Bei Fragen kontaktieren Sie uns unter info@renuo.ch.</p>
         </div>
+      <div class="span4">
+        <address>
+          <b>Datenschutz & Sicherheit im Web/b><br/>
+          <b>Was bringt mir SEO & SEA/b><br/>
+          <b>Tech und Online Trends 2017/b><br/>
+        </address>
+      </div>
+      <div class="span6">
+        <dl class="dl-horizontal" style="margin-top: 0;">
+          <dt>Mittwoch, 15. Juni 2016</dt>
+          <dt>Dienstag, 27. September 2016</dt>
+          <dt>Donnerstag, 17. November 2016</dt>
+        </dl>
+      </div>
+                </div>
                 <small>DATENSCHUTZ & SICHERHEIT IM WEB</small>
       <p>Mittwoch, 15. Juni 2016</p>
         </div>
