--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -13,16 +13,12 @@ position:
                 </div>
       <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu den RENUO GET TOGETHERS 2016 ein!</p>
 <p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich. Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
-<p>Bitte melden Sie sich und Ihre Begleitung bis eine Woche vor dem jeweiligen Event an. Bei Fragen kontaktieren Sie uns unter info@renuo.ch.</p>
         </div>
-      <div class="span4">
-        <address>
-          <b>Datenschutz & Sicherheit im Web/b><br/>
-          <b>Was bringt mir SEO & SEA/b><br/>
-          <b>Tech und Online Trends 2017/b><br/>
-        </address>
+          <b>Datenschutz & Sicherheit im Web<br/>
+          <b>Was bringt mir SEO & SEA<br/>
+          <b>Tech und Online Trends 2017<br/>
       </div>
-      <div class="span6">
+      <div class="span5">
         <dl class="dl-horizontal" style="margin-top: 0;">
           <dt>Mittwoch, 15. Juni 2016</dt>
           <dt>Dienstag, 27. September 2016</dt>
@@ -30,16 +26,19 @@ position:
         </dl>
       </div>
                 </div>
-                <small>DATENSCHUTZ & SICHERHEIT IM WEB</small>
+          <b>Datum<br/>
+                <p>DATENSCHUTZ & SICHERHEIT IM WEB</p>
       <p>Mittwoch, 15. Juni 2016</p>
         </div>
-                <small>WAS BRINGT MIR SEO & SEA?</small>
+                <p>WAS BRINGT MIR SEO & SEA?</p>
       <p>Dienstag, 27. September 2016</p>
         </div>
-                <small>TECH UND ONLINE TRENDS 2017</small>
+                <p>TECH UND ONLINE TRENDS 2017</p>
       <p>Donnerstag, 17. November 2016</p>
         </div>
-    </div>
+            <b>Anmeldung<br/>
+<p>Bitte melden Sie sich und Ihre Begleitung bis eine Woche vor dem jeweiligen Event an. Bei Fragen kontaktieren Sie uns unter info@renuo.ch.</p>
+  </div>
 </div>
 
 <div class="row-fluid page-section" style="margin-top: 15px;">
