--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -2,6 +2,12 @@
 layout: 'page'
 title: 'RENUO GET TOGETHERS'
 description: 'Melden Sie sich und Ihre Mitarbeitenden jetzt an'
+homeSlider:
+    -
+        image: /images/renuo/slider_home/team.jpg
+        image_alt: Renuo GmbH Teamfoto
+        title:
+        subtitle:
 position:
 ---
 
@@ -14,18 +20,6 @@ position:
       <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu den RENUO GET TOGETHERS 2016 ein!</p>
 <p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich. Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
         </div>
-          <b>Datenschutz & Sicherheit im Web<br/>
-          <b>Was bringt mir SEO & SEA<br/>
-          <b>Tech und Online Trends 2017<br/>
-      </div>
-      <div class="span5">
-        <dl class="dl-horizontal" style="margin-top: 0;">
-          <dt>Mittwoch, 15. Juni 2016</dt>
-          <dt>Dienstag, 27. September 2016</dt>
-          <dt>Donnerstag, 17. November 2016</dt>
-        </dl>
-      </div>
-                </div>
           <b>Datum<br/>
                 <p>DATENSCHUTZ & SICHERHEIT IM WEB</p>
       <p>Mittwoch, 15. Juni 2016</p>
