--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -2,11 +2,6 @@
 layout: 'page'
 title: 'RENUO GET TOGETHERS'
 description: 'Melden Sie sich und Ihre Mitarbeitenden jetzt an'
-homeSlider:
-    -
-        image: /images/renuo/slider_home/team.jpg
-        image_alt: Renuo GmbH Teamfoto
-        title:
         subtitle:
 position:
 ---
@@ -17,10 +12,17 @@ position:
             <h1>RENUO GET TOGETHERS
                 <small>2016</small>
                 </div>
+                <div class="row-fluid page-section" style="margin-top: 15px;">
+    <div class="span12">
+        <div><%- @image_tag 'renuo_team.jpg' %></div>
+    </div>
+</div>
       <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu den RENUO GET TOGETHERS 2016 ein!</p>
-<p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich. Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
+<p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich.</p>
+<p>Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
         </div>
           <b>Datum<br/>
+          </div>
                 <p>DATENSCHUTZ & SICHERHEIT IM WEB</p>
       <p>Mittwoch, 15. Juni 2016</p>
         </div>
@@ -30,8 +32,6 @@ position:
                 <p>TECH UND ONLINE TRENDS 2017</p>
       <p>Donnerstag, 17. November 2016</p>
         </div>
-            <b>Anmeldung<br/>
-<p>Bitte melden Sie sich und Ihre Begleitung bis eine Woche vor dem jeweiligen Event an. Bei Fragen kontaktieren Sie uns unter info@renuo.ch.</p>
   </div>
 </div>
 
