--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -11,23 +11,16 @@ position:
             <h1>RENUO GET TOGETHERS
                 <small>2016</small>
                 </div>
-                <div class="row-fluid page-section" style="margin-top: 15px;">
-    <div class="span12">
-        <div><%- @image_tag 'renuo_team.jpg' %></div>
-        </div>
-    </div>
-</div>
 <div class="row-fluid page-section" style="margin-top: 15px;">
     <div class="span12">
         <div><%- @image_tag 'renuo_team.jpg' %></div>
     </div>
 </div>
-
       <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu den RENUO GET TOGETHERS 2016 ein!</p>
 <p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich.</p>
 <p>Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
         </div>
-          <b>Datum<br/>
+          <p>Datum<p/>
           </div>
                 <p>DATENSCHUTZ & SICHERHEIT IM WEB</p>
       <p>Mittwoch, 15. Juni 2016</p>
