--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -11,25 +11,20 @@ position:
             <h1>RENUO GET TOGETHERS
                 <small>2016</small>
                 </div>
-<div class="row-fluid page-section" style="margin-top: 15px;">
-    <div class="span12">
-        <div><%- @image_tag 'renuo_team.jpg' %></div>
-    </div>
-</div>
       <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu den RENUO GET TOGETHERS 2016 ein!</p>
-<p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich.</p>
-<p>Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
+<p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich.
+Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
         </div>
           <p>Datum<p/>
           </div>
-                <p>DATENSCHUTZ & SICHERHEIT IM WEB</p>
-      <p>Mittwoch, 15. Juni 2016</p>
+                <p>DATENSCHUTZ & SICHERHEIT IM WEB
+      Mittwoch, 15. Juni 2016</p>
         </div>
-                <p>WAS BRINGT MIR SEO & SEA?</p>
-      <p>Dienstag, 27. September 2016</p>
+                <p>WAS BRINGT MIR SEO & SEA?
+                      Dienstag, 27. September 2016</p>
         </div>
-                <p>TECH UND ONLINE TRENDS 2017</p>
-      <p>Donnerstag, 17. November 2016</p>
+                <p>TECH UND ONLINE TRENDS 2017
+      Donnerstag, 17. November 2016</p>
         </div>
   </div>
 </div>
