--- a/src/documents/kundenumfrage/index.html
+++ b/src/documents/kundenumfrage/index.html
@@ -8,13 +8,13 @@ position:
 <div class="row-fluid page-section">
     <div class="span12">
         <div class="page-header">
-            <h1>Kundenumfrage Renuo GmbH
-                <small>Vielen Dank, dass Sie sich einige Minuten Zeit nehmen, um unsere Umfrage auszufüllen.</small>
+            <h1>Kundenumfrage
+                <small>Ihre Zufriedenheit liegt uns am Herzen.</small>
             </h1>
         </div>
+<p>Vielen Dank, dass Sie sich einige Minuten Zeit nehmen, um unsere Umfrage auszufüllen.</p>
     </div>
 </div>
-
 <div class="row-fluid page-section" style="margin-top: 15px;">
   <iframe src="https://docs.google.com/a/renuo.ch/forms/d/1Qc-_aMoXURxyupkVJY1xastNUfRP_rsBjpVtYwSzNgY/viewform?embedded=true"
           class="new-office-registration" frameborder="0" marginheight="0" marginwidth="0">Wird geladen...
