get togethers und kundenumfrage

--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -1,6 +1,6 @@
 ﻿--- yaml
 layout: 'page'
-title: 'RENUO GET TOGETHERS'
+title: 'Renuo get togethers'
 description: 'Melden Sie sich und Ihre Mitarbeitenden jetzt an'
 position:
 ---
@@ -8,26 +8,13 @@ position:
 <div class="row-fluid page-section">
     <div class="span12">
         <div class="page-header">
-            <h1>RENUO GET TOGETHERS
+            <h1>Renuo get togethers
                 <small>2016</small>
                 </div>
       <p>Wir laden Sie und Ihre Mitarbeitenden herzlich zu den RENUO GET TOGETHERS 2016 ein!</p>
 <p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich.
 Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
         </div>
-          <p>Datum<p/>
-          </div>
-                <p>DATENSCHUTZ & SICHERHEIT IM WEB
-      Mittwoch, 15. Juni 2016</p>
-        </div>
-                <p>WAS BRINGT MIR SEO & SEA?
-                      Dienstag, 27. September 2016</p>
-        </div>
-                <p>TECH UND ONLINE TRENDS 2017
-      Donnerstag, 17. November 2016</p>
-        </div>
-  </div>
-</div>
 
 <div class="row-fluid page-section" style="margin-top: 15px;">
   <iframe src="https://docs.google.com/a/renuo.ch/forms/d/13issU97MdYurac_AR7qlggMhCiFkaaf1mQNkPnBscHE/viewform?embedded=true"
