--- a/src/documents/kundenumfrage/index.html
+++ b/src/documents/kundenumfrage/index.html
@@ -9,7 +9,7 @@ position:
     <div class="span12">
         <div class="page-header">
             <h1>Kundenumfrage
-                <small>Ihre Zufriedenheit liegt uns am Herzen.</small>
+                <small>Ihre Zufriedenheit liegt uns am Herzen</small>
             </h1>
         </div>
 <p>Vielen Dank, dass Sie sich einige Minuten Zeit nehmen, um unsere Umfrage auszufüllen.</p>
