--- a/src/documents/gettogethers/index.html
+++ b/src/documents/gettogethers/index.html
@@ -15,7 +15,7 @@ position:
 <p>Bei erfrischenden Getränken und leckeren Köstlichkeiten erfahren Sie bei unserer Short Presentation News und Trends im Online Bereich.
 Tauschen Sie sich anschliessend im Gespräch mit uns und anderen Kunden über Ihre Erfahrungen aus. Wir freuen uns auf Sie!</p>
         </div>
-
+</div>
 <div class="row-fluid page-section" style="margin-top: 15px;">
   <iframe src="https://docs.google.com/a/renuo.ch/forms/d/13issU97MdYurac_AR7qlggMhCiFkaaf1mQNkPnBscHE/viewform?embedded=true"
           class="new-office-registration" frameborder="0" marginheight="0" marginwidth="0">Wird geladen...
