--- a/src/documents/kundenumfrage/index.html
+++ b/src/documents/kundenumfrage/index.html
@@ -1,22 +1,26 @@
 ﻿--- yaml
-layout: 'page'
+layout: 'default'
 title: 'Kundenumfrage'
 description: 'Die Zufriedenheit unserer Kunden liegt uns sehr am Herzen'
-position:
 ---
 
 <div class="row-fluid page-section">
-    <div class="span12">
-        <div class="page-header">
-            <h1>Kundenumfrage
-                <small>Ihre Zufriedenheit liegt uns am Herzen</small>
-            </h1>
-        </div>
-<p>Vielen Dank, dass Sie sich einige Minuten Zeit nehmen, um unsere Umfrage auszufüllen.</p>
+  <div class="span12">
+    <div>
+      <div class="page-header">
+        <h1>Kundenumfrage
+          <small>Ihre Zufriedenheit liegt uns am Herzen</small>
+        </h1>
+      </div>
+      <div>
+        <p>Vielen Dank, dass Sie sich einige Minuten Zeit nehmen, um unsere Umfrage auszufüllen.</p>
+      </div>
     </div>
+  </div>
 </div>
+
 <div class="row-fluid page-section" style="margin-top: 15px;">
   <iframe src="https://docs.google.com/a/renuo.ch/forms/d/1Qc-_aMoXURxyupkVJY1xastNUfRP_rsBjpVtYwSzNgY/viewform?embedded=true"
-          class="new-office-registration" frameborder="0" marginheight="0" marginwidth="0">Wird geladen...
+          class="customer-survey" frameborder="0" marginheight="0" marginwidth="0">Wird geladen...
   </iframe>
 </div>
