- Arbeitsmethode Scrum positiv ausformuliert, damit nicht mit negativem begonnen wird. - Bereich Training ergänzt

--- a/src/documents/web-entwicklung/index.html
+++ b/src/documents/web-entwicklung/index.html
@@ -45,9 +45,9 @@ position: 1
     <div class="span6">
         <h2>Kon&shy;zep&shy;tion</h2>
         <div>
-            <h3><small>Zielgerichtete Strategie mit Blick in die Zukunft</small></h3><p>In der 
-            Konzeptionsphase geht es darum zu verstehen, wohin Sie wollen. Was sind Ihre Ziele, welche Nutzergruppen 
-            sprechen Sie an und was für Bedürfnisse haben diese? Zusammen mit Ihnen werden wir die Anforderungen 
+            <h3><small>Zielgerichtete Strategie mit Blick in die Zukunft</small></h3><p>In der
+            Konzeptionsphase geht es darum zu verstehen, wohin Sie wollen. Was sind Ihre Ziele, welche Nutzergruppen
+            sprechen Sie an und was für Bedürfnisse haben diese? Zusammen mit Ihnen werden wir die Anforderungen
             identifizieren, Ideen sammeln und diese bewerten. Sobald zwischen Ihnen und uns ein klares Verständnis
             hergestellt worden ist, werden wir in einem zweiten Schritt die Anforderungen in technische und funktionale
             Konzepte übersetzen. Wir zeigen Ihnen Lösungsvarianten und beschreiben, inwiefern bestehende Lösungen
@@ -60,7 +60,7 @@ position: 1
         <div>
             <h3><small>Individuelles Design mit Fokus auf Usability</small></h3><p>In der Informationsflut des Internets
             ist es nicht einfach, aufzufallen und gesehen zu werden. Das richtige Web Design hilft Ihnen dabei, sich
-            im Internet gut zu präsentieren und den Besuchern einen visuell ansprechenden Auftritt zu bieten. Das 
+            im Internet gut zu präsentieren und den Besuchern einen visuell ansprechenden Auftritt zu bieten. Das
             beinhaltet das Abstimmen von Elementen, eine klare und einfache Benutzerführung, die Farb- und Schriftwahl
             sowie einen gezielten Einsatz von visuellen Eye-Catchern. Neben einem ansprechenden Äusseren ist die
             richtige Umsetzung aber ebenso entscheidend. Wir entwickeln nach aktuellen Webstandards und sichern
@@ -77,21 +77,21 @@ position: 1
         <h2>Ent&shy;wick&shy;lung</h2>
         <div>
             <h3><small>Innovative Software mithilfe modernster Technologien</small></h3><p>Die Entwicklung innovativer
-            Software im Web ist unsere Kernkompetenz. In der Entwicklungsphase wird der eigentliche Code geschrieben 
-            und getestet. Auf einer Testumgebung können Sie unseren Fortschritt stets beobachten und laufend feedbacken. 
-            So stellen wir sicher, dass Sie mit dem Endprodukt zufrieden sind und die Kosten so tief wie möglich 
-            gehalten werden. Automatisierte Tests stellen zudem sicher, dass allfällige Fehler automatisch und sofort aufgedeckt 
-            und behoben werden können. In wöchentlichen Abstimmungsmeetings zwischen Ihnen und uns planen wir jeweils 
-            die nächsten Schritte.</p> <p><a href="/web-entwicklung/rubyonrails"><i class="icon-double-angle-right"></i> Mehr zum Thema Entwicklung</a></p>					
+            Software im Web ist unsere Kernkompetenz. In der Entwicklungsphase wird der eigentliche Code geschrieben
+            und getestet. Auf einer Testumgebung können Sie unseren Fortschritt stets beobachten und laufend feedbacken.
+            So stellen wir sicher, dass Sie mit dem Endprodukt zufrieden sind und die Kosten so tief wie möglich
+            gehalten werden. Automatisierte Tests stellen zudem sicher, dass allfällige Fehler automatisch und sofort aufgedeckt
+            und behoben werden können. In wöchentlichen Abstimmungsmeetings zwischen Ihnen und uns planen wir jeweils
+            die nächsten Schritte.</p> <p><a href="/web-entwicklung/rubyonrails"><i class="icon-double-angle-right"></i> Mehr zum Thema Entwicklung</a></p>
         </div>
     </div>
 
     <div class="span6">
         <h2>Betrieb</h2>
         <div>
-            <h3><small>Sicherheit, Überwachung, Aktualisierung und Ausbau</small></h3><p>Stillstand ist Rückschritt! 
+            <h3><small>Sicherheit, Überwachung, Aktualisierung und Ausbau</small></h3><p>Stillstand ist Rückschritt!
             Nach der Fertigstellung Ihrer Webplattform kümmern wir uns um die Wartung Ihrer Applikation sowie um
-            dessen kontinuierliche Weiterentwicklung. Das beinhaltet z.B. das Schliessen von Sicherheitslücken, das
+            deren kontinuierliche Weiterentwicklung. Das beinhaltet zum Beispiel das Schliessen von Sicherheitslücken, das
             Updaten von Software, proaktive Belastbarkeitstests um der wachsenden Useranzahl gerecht zu werden sowie
             das Hinzuprogrammieren von weiteren Anforderungen.</p> <p><a href="/web-entwicklung/betrieb"><i class="icon-double-angle-right"></i> Mehr zum Thema Betrieb</a></p>
         </div>
@@ -102,7 +102,7 @@ position: 1
 <div class="row-fluid page-header-element page-section">
     <div class="span12">
         <div class="page-header">
-            <h1>Con&shy;sul&shy;ting
+            <h1>Con&shy;sul&shy;ting und Training
                 <small>Unser Know-How in Ihrem Büro</small>
             </h1>
         </div>
@@ -113,11 +113,14 @@ position: 1
 
     <div class="span8">
         <p>Sie entwickeln selbst Software, Ihnen fehlt aber in einigen Bereichen das Wissen oder Sie brauchen für
-            Ihre Projekte zusätzliche Kapazitäten? Wir unterstützen Sie und leihen Ihnen hochqualifizierte Entwickler
-            und Berater aus, indem wir uns in bestehende Strukturen einfügen. Ihr Vorteil? Sie übernehmen als
-            Unternehmen keine Pflichten als Arbeitgeber, sondern stellen nur den Arbeitsplatz vor Ort zur Verfügung.
-            Reagieren Sie somit schnell auf Engpässe, ohne das Risiko einer neuen Anstellung einzugehen. Ein Engagement
-            dauert typischerweise mehrere Wochen bis Monate - je nach Ihrem Bedarf.</p><br>
+        Ihre Projekte zusätzliche Kapazitäten? Dann sind Sie bei uns genau richtig!</p>
+        <p>Die Renuo bietet diverse Trainings an, die auf Ihre individuellen Bedürfnisse zugeschnitten sind.
+        Unsere erfahrenen Mitarbeitenden schulen Sie und Ihr Team in den Bereichen Web Entwicklung, Responsive
+         Webdesign und Mobile Applikationen.</p>
+        <p>Weiter können wir Sie auch bei personellen Engpässen mit hochqualifizierten Entwicklern und Beratern
+         der Renuo bei Ihnen vor Ort unterstützen. Ihr Vorteil? Sie übernehmen keine Pflichten als Arbeitgeber
+         und können trotzdem schnell auf Engpässe reagieren, ohne das Risiko einer neuen Anstellung einzugehen.
+         Ein Engagement kann mehrere Wochen bis Monate dauern – je nach Ihrem Bedarf.</p><br>
 	<p>Consulting-Referenz: Siehe hierzu z.B. <a href="/referenzen/collumino/">Consulting collumino.com</a>.</p>
     </div>
 
