--- a/src/documents/kontakt/index.html
+++ b/src/documents/kontakt/index.html
@@ -28,7 +28,7 @@ position: 7
         <div>
             <div class="span4">
                 <address>
-                    <b>Renuo GmbH</b><br/>
+                    <b>Renuo AG</b><br/>
                     Industriestrasse 44<br/>
                     8304 Wallisellen<br/><br/>
                 </address>
