--- a/src/documents/jobs/151218-hms-praktikum.html
+++ b/src/documents/jobs/151218-hms-praktikum.html
@@ -2,7 +2,10 @@
 layout: 'jobs'
 title: 'HMS-Praktikum 2016/2017'
 description: 'Wir bieten eine HMS-Praktikumsstelle 2016/2017 bei der Renuo'
-position:
+position: 100
+tags: ['jobs']		
+period: July 2016 - July 2017		
+workload: 100%
 ---
 
 <div class="row-fluid">
