add st gallen specific jobs

--- a/src/documents/jobs/151118-front-end-open-source-web-engineer.html
+++ b/src/documents/jobs/151118-front-end-open-source-web-engineer.html
@@ -3,7 +3,7 @@ layout: jobs
 title: Front-End Open-Source Software Engineer
 description: Jobs at Renuo
 position: 2
-tags: ['jobs', 'jobs-online']
+tags: ['jobs', 'jobs-online-zurich']
 period: Permanently, as of now
 workload: 80-100%
 ---
