--- a/src/documents/jobs/160803-ims-praktikum.html
+++ b/src/documents/jobs/160803-ims-praktikum.html
@@ -3,7 +3,7 @@ layout: 'jobs'
 title: 'IMS-Praktikum 2017/2018'
 description: 'Wir bieten zwei IMS-Praktikumsstellen 2017/2018 bei der Renuo'
 position: 10
-tags: ['jobs', 'jobs-online']
+tags: ['jobs', 'jobs-online-zurich']
 period: August 2017 - July 2018
 workload: 100%
 ---
