--- a/src/documents/kontakt/index.html
+++ b/src/documents/kontakt/index.html
@@ -41,7 +41,7 @@ position: 7
                   <dt>Email</dt>
                   <dd><a href="mailto:info@renuo.ch">info@renuo.ch</a></dd>
                   <dt>Web</dt>
-                  <dd><a href="/">www.renuo.ch</a></dd>
+                  <dd><a href="/">https://www.renuo.ch</a></dd>
               </dl>
             </div>
         </div>
