remove target="_blank" everywhere, fix some bugs

--- a/src/documents/jobs/150625-sea-seo.html
+++ b/src/documents/jobs/150625-sea-seo.html
@@ -17,7 +17,7 @@ position:
 	<div class="row-fluid">
     <div class="span12">
 			<h3>Wir suchen ab sofort einen AdWords, SEA & SEO Consultant</h3>
-      <p>Die Renuo hat für diverse Kunden SEA-Mandate inne. Mit unterschiedlichen AdWords-Kampagnen (Text, Bild, Remarketing, RichMedia) stellen wir sicher, dass unsere angefertigten Webapplikationen auch zu den entsprechenden Kunden kommen. Seit dem Beginn 2014 sind wir <a href="https://www.google.com/partners/#a_profile;idtf=2492208531" target="_blank">offizieller Google Partner</a>.</p>
+      <p>Die Renuo hat für diverse Kunden SEA-Mandate inne. Mit unterschiedlichen AdWords-Kampagnen (Text, Bild, Remarketing, RichMedia) stellen wir sicher, dass unsere angefertigten Webapplikationen auch zu den entsprechenden Kunden kommen. Seit dem Beginn 2014 sind wir <a href="https://www.google.com/partners/#a_profile;idtf=2492208531">offizieller Google Partner</a>.</p>
 			<p>Mit steigender Kundenanzahl ist auch der Betreuungsaufwand gestiegen. Aus diesem Grund suchen wir zur Verstärkung unseres Teams eine verantwortungsvolle und selbständige Persönlichkeit. Nach Einführung durch uns übernimmst Du die volle Betreuung der Kunden und deren Kampagnen.</p>
 			<br/>
 		</div>
