--- a/src/documents/referenzen/home60.html
+++ b/src/documents/referenzen/home60.html
@@ -48,7 +48,7 @@ slider:
 			   Sürchstrasse 17<br>
                8463 Benken ZH<br></p>
 
-            <p>Link: <a href="https://www.home60.ch/" target="_blank">https://www.home60.ch/</a></p>
+            <p>Link: <a href="https://www.home60.ch/">https://www.home60.ch/</a></p>
 			<p>Die Partnerschaft besteht seit Oktober 2014.</p>
 
         </div>
