--- a/src/documents/web-entwicklung/rubyonrails.html
+++ b/src/documents/web-entwicklung/rubyonrails.html
@@ -54,12 +54,12 @@ position: 1
             effizienter wird.</p>
 
         <p>Ruby on Rails wurde schon in vielen Projekten eingesetzt
-            (zum Beispiel bei <a href="http://www.twitter.com/" target="_blank">Twitter</a>,
-            <a href="http://www.groupon.com/" target="_blank">Groupon</a>,
-            <a href="http://www.xing.com" target="_blank">Xing</a>, usw.)
+            (zum Beispiel bei <a href="http://www.twitter.com/">Twitter</a>,
+            <a href="http://www.groupon.com/">Groupon</a>,
+            <a href="http://www.xing.com">Xing</a>, usw.)
             und überzeugt immer wieder mit Innovation.
             Weitere Informationen zu Ruby on Rails finden Sie unter:
-            <a href="http://rubyonrails.org/" target="_blank">http://rubyonrails.org</a></p>
+            <a href="http://rubyonrails.org/">http://rubyonrails.org</a></p>
 
         <br/><img src="/images/technologien/rubyonrails.png" width="20%" alt="Ruby on Rails Logo">
     </div>
