--- a/src/documents/referenzen/tages-anzeiger-wahlboerse.html
+++ b/src/documents/referenzen/tages-anzeiger-wahlboerse.html
@@ -56,8 +56,8 @@ slider:
             <p>Ansprechperson: Samuel Reber<br>
                Telefon +41 44 248 41 11</p>
 
-            <p>Link: <a href="https://election-market-master.renuoapp.ch/" target="_blank">https://election-market-master.renuoapp.ch/</a></p>
-			<p>Je nach anstehender Wahl können die Widgets z.B. live unter <a href="http://www.tagesanzeiger.ch" target="_blank">http://www.tagesanzeiger.ch</a> betrachtet werden. Gleichzeitig läuft die App auch unter einer Renuo-eigenen Domain, sodass das Projekt begutachtet werden kann.</p>
+            <p>Link: <a href="https://election-market-master.renuoapp.ch/">https://election-market-master.renuoapp.ch/</a></p>
+			<p>Je nach anstehender Wahl können die Widgets z.B. live unter <a href="http://www.tagesanzeiger.ch">http://www.tagesanzeiger.ch</a> betrachtet werden. Gleichzeitig läuft die App auch unter einer Renuo-eigenen Domain, sodass das Projekt begutachtet werden kann.</p>
 
             <div><img src="/images/logoslider/tamedia_logo.png" alt="Logo Tamedia"></div>
         </div>
