--- a/src/documents/referenzen/tages-anzeiger-wm.html
+++ b/src/documents/referenzen/tages-anzeiger-wm.html
@@ -30,7 +30,7 @@ slider:
         <h2>Ausgangslage</h2>
 
         <div>
-            <p>Für die WM 2014 plant Tamedia für alle online Medien von Newsnet (<a href="http://www.tagesanzeiger.ch" target="_blank">tagesanzeiger.ch</a>, <a href="http://www.bernerzeitung.ch" target="_blank">bernerzeitung.ch</a>, <a href="http://www.baslerzeitung.ch" target="_blank">baslerzeitung.ch</a>, <a href="http://www.lematin.ch" target="_blank">lematin.ch</a> sowie <a href="http://www.24heures.ch" target="_blank">24heures.ch</a>) ein Multidevice-Widget, welches die WM in Zahlen zusammenfasst.</p>
+            <p>Für die WM 2014 plant Tamedia für alle online Medien von Newsnet (<a href="http://www.tagesanzeiger.ch">tagesanzeiger.ch</a>, <a href="http://www.bernerzeitung.ch">bernerzeitung.ch</a>, <a href="http://www.baslerzeitung.ch">baslerzeitung.ch</a>, <a href="http://www.lematin.ch">lematin.ch</a> sowie <a href="http://www.24heures.ch">24heures.ch</a>) ein Multidevice-Widget, welches die WM in Zahlen zusammenfasst.</p>
 			<p>Die Statistiken sollen Ranglisten über erzielte Tore, Abseitsstellungen, vergebene Grosschancen und vieles mehr umfassen. Des Weiteren sollen auf Basis von Spielern und Teams Vergleiche möglich sein. Die Applikation muss sowohl auf Desktopgeräten, wie aber auch auf mobilen Geräten wie Smartphones und Tablets perfekt dargestellt sein (fully responsive) und bei Klicks im sieben- bis achtstelligen Bereich stets performant laufen.</p>
 			<p>Realisierungszeit: 2,5 Wochen</p>
         </div>
@@ -58,7 +58,7 @@ slider:
             <p>Ansprechperson: Samuel Reber<br>
                Telefon +41 44 248 41 11</p>
 
-            <p>Link: <a href="http://files.newsnetz.ch/archive/stats/" target="_blank">http://tamedia.renuo.ch/stats/</a></p>
+            <p>Link: <a href="http://files.newsnetz.ch/archive/stats/">http://tamedia.renuo.ch/stats/</a></p>
 			<p>Weil die WM nicht mehr läuft, ist die original Referenz nicht mehr online. Der oben stehende Link zeigt die Applikation auf dem Server der Tamedia.</p>
 			<p>Die Partnerschaft war ein einmaliger Auftrag und dauerte von Mai 2014 bis Juli 2014.</p>
 
