move more code to the header, get rid of duplicated code

--- a/src/documents/ueber-uns/alessandro-rodi.html
+++ b/src/documents/ueber-uns/alessandro-rodi.html
@@ -1,19 +1,14 @@
 ---
 name: Alessandro Rodi
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: coorasse
+xing: Alessandro_Rodi
 image: alessandro
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Engineer, B.Sc. CS
+job_title_break: Web-Engineer, B.Sc. CS
 tags: ['employee']
 position: 4
 ---
-
-<p>Web-Engineer, B.Sc. CS<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -46,9 +41,4 @@ position: 4
       </tbody>
     </table>
   </div>
-</div>
-
-<div class="profile-social-links">
-  <a href="https://github.com/coorasse"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
-  <a href="https://www.xing.com/profile/Alessandro_Rodi"><i title="Zum Xing Profil" class="icon-xing-sign icon-4x"></i></a>
 </div>
