--- a/src/documents/ueber-uns/alyssa-eguavoen.html
+++ b/src/documents/ueber-uns/alyssa-eguavoen.html
@@ -1,19 +1,14 @@
 ---
 name: Alyssa Eguavoen
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: alyssaeguavoen
+xing:
 image: noface
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Administration
+job_title_break: Administration
 tags: ['employee']
 position: 19
 ---
-
-<p>Administration<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -38,7 +33,4 @@ position: 19
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/alyssaeguavoen"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
