--- a/src/documents/ueber-uns/amina-giger.html
+++ b/src/documents/ueber-uns/amina-giger.html
@@ -1,19 +1,14 @@
 ---
 name: Amina Giger
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: aminagiger
+xing: Amina_Giger
 image: amina
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Online Marketing Consultant, HF
+job_title_break: Online Marketing Consultant, HF
 tags: ['employee']
 position: 9
 ---
-
-<p>Online Marketing Consultant, HF<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -45,7 +40,4 @@ position: 9
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://www.xing.com/profile/Amina_Giger"><i title="Zum Xing Profil" class="icon-xing-sign icon-4x"></i></a>
 </div>
