--- a/src/documents/ueber-uns/diego-steiner.html
+++ b/src/documents/ueber-uns/diego-steiner.html
@@ -1,24 +1,14 @@
 ---
 name: Diego P. Steiner
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: diegosteiner
+xing: DiegoP_Steiner
 image: diego
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email: diego.steiner@renuo.ch
+job_title: Web-Engineer und Gründer, B.Sc. HSR CS
+job_title_break: Web-Engineer und Gründer<br>B.Sc. HSR CS
 tags: ['employee']
 position: 2
 ---
-
-<div class="job-title normal">Web-Engineer und Gründer, B.Sc. HSR CS</div>
-<div class="job-title break">Web-Engineer und Gründer<br>B.Sc. HSR CS</div>
-<div class="email-address"><a href="mailto:diego.steiner@renuo.ch">diego.steiner@renuo.ch</a></div>
-
-<!--<blockquote>Ich möchte, dass der Kunde mit meiner Arbeit höchst zufrieden ist. Zusätzlich möchte ich
-    nachhaltige, gut wartbare und erweiterbare Software schreiben.
-    <small>Diego Steiner</small>
-</blockquote>-->
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -56,10 +46,4 @@ position: 2
       </tbody>
     </table>
   </div>
-</div>
-
-<div class="profile-social-links">
-  <a href="https://github.com/diegosteiner"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
-  <a href="https://www.xing.com/profile/DiegoP_Steiner"><i title="Zum Xing Profil"
-                                                           class="icon-xing-sign icon-4x"></i></a>
 </div>
