--- a/src/documents/ueber-uns/josua-schmid.html
+++ b/src/documents/ueber-uns/josua-schmid.html
@@ -1,19 +1,14 @@
 ---
 name: Josua Schmid
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: schmijos
+xing: Josua_Schmid3
 image: josua
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Engineer, B.Sc. HSR CS
+job_title_break: Web-Engineer, B.Sc. HSR CS
 tags: ['employee']
 position: 5
 ---
-
-<p>Web-Engineer, B.Sc. HSR CS<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -46,10 +41,4 @@ position: 5
       </tbody>
     </table>
   </div>
-</div>
-
-<div class="profile-social-links">
-  <a href="https://github.com/schmijos"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
-  <a href="https://www.xing.com/profile/Josua_Schmid3"><i title="Zum Xing Profil"
-                                                          class="icon-xing-sign icon-4x"></i></a>
 </div>
