--- a/src/documents/ueber-uns/lukas-elmer.html
+++ b/src/documents/ueber-uns/lukas-elmer.html
@@ -1,24 +1,14 @@
 ---
 name: Lukas Elmer
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: lukaselmer
+xing: Lukas_Elmer
 image: lukas
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email: lukas.elmer@renuo.ch
+job_title: 'Web-Engineer und Gründer, M.Sc. ETH CS, B.Sc. HSR CS, <a href="http://www.pk19.ch/">Experte PK19</a>'
+job_title_break: 'Web-Engineer und Gründer<br>M.Sc. ETH CS, B.Sc. HSR CS, <a href="http://www.pk19.ch/">Experte PK19</a>'
 tags: ['employee']
 position: 1
 ---
-
-<div class="job-title normal">Web-Engineer und Gründer, M.Sc. ETH CS, B.Sc. HSR CS, <a href="http://www.pk19.ch/">Experte PK19</a></div>
-<div class="job-title break">Web-Engineer und Gründer<br>M.Sc. ETH CS, B.Sc. HSR CS, <a href="http://www.pk19.ch/">Experte PK19</a></div>
-<div class="email-address"><a href="mailto:lukas.elmer@renuo.ch">lukas.elmer@renuo.ch</a></div>
-
-<!--<blockquote>Mein Ziel ist es, in enger Zusammenarbeit mit dem Kunden solide Software zu entwickeln, die
-    funktioniert.
-    <small>Lukas Elmer</small>
-</blockquote>-->
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -63,9 +53,4 @@ position: 1
       </tbody>
     </table>
   </div>
-</div>
-
-<div class="profile-social-links">
-  <a href="https://github.com/lukaselmer"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
-  <a href="https://www.xing.com/profile/Lukas_Elmer"><i title="Zum Xing Profil" class="icon-xing-sign icon-4x"></i></a>
 </div>
