--- a/src/documents/ueber-uns/martin-cavoj.html
+++ b/src/documents/ueber-uns/martin-cavoj.html
@@ -1,19 +1,14 @@
 ---
 name: Martin Čavoj
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: macav
+xing:
 image: martin
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Engineer, M.Sc. CS
+job_title_break: Web-Engineer, M.Sc. CS
 tags: ['employee']
 position: 12
 ---
-
-<p>Web-Engineer, M.Sc. CS<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -53,7 +48,4 @@ position: 12
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/macav"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
