--- a/src/documents/ueber-uns/patrik-peng.html
+++ b/src/documents/ueber-uns/patrik-peng.html
@@ -1,19 +1,14 @@
 ---
 name: Patrik Peng
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: patrikpeng
+xing:
 image: patrik
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Developer
+job_title_break: Web-Developer
 tags: ['employee']
 position: 14
 ---
-
-<p>Web-Developer<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -45,7 +40,4 @@ position: 14
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/patrikpeng"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
