--- a/src/documents/ueber-uns/richard-buetzer.html
+++ b/src/documents/ueber-uns/richard-buetzer.html
@@ -1,19 +1,14 @@
 ---
 name: Richard Bützer
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: rbuetzer
+xing:
 image: richard
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Engineer, B.Sc. ETH CS
+job_title_break: Web-Engineer, B.Sc. ETH CS
 tags: ['employee']
 position: 11
 ---
-
-<p>Web-Engineer, B.Sc. ETH CS<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -47,7 +42,4 @@ position: 11
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/rbuetzer"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
