--- a/src/documents/ueber-uns/roger-ruettimann.html
+++ b/src/documents/ueber-uns/roger-ruettimann.html
@@ -1,18 +1,14 @@
 ---
 name: Roger Rüttimann
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: rroger
+xing: Roger_Ruettimann
 image: roger
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
+email:
+job_title: Web-Engineer, B.Sc. ZFH CS
+job_title_break: Web-Engineer, B.Sc. ZFH CS
 tags: ['employee']
 position: 8
 ---
-
-<p>Web-Engineer, B.Sc. ZFH CS<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -52,8 +48,4 @@ position: 8
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/rroger"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
-  <a href="https://www.xing.com/profile/Roger_Ruettimann"><i title="Zum Xing Profil" class="icon-xing-sign icon-4x"></i></a>
 </div>
