--- a/src/documents/ueber-uns/samuel-steiner.html
+++ b/src/documents/ueber-uns/samuel-steiner.html
@@ -1,25 +1,15 @@
 ---
 name: Samuel Steiner
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: samuelsteiner
+xing: Samuel_Steiner3
 image: samuel
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
+email: samuel.steiner@renuo.ch
+job_title: Managing Partner, M.A. HSG
+job_title_break: 'Managing Partner<br>M.A. HSG'
 html_anchor_id: samuel_steiner
-
 tags: ['employee']
 position: 3
 ---
-
-<div class="job-title normal">Managing Partner, M.A. HSG</div>
-<div class="job-title break">Managing Partner<br>M.A. HSG</div>
-<div class="email-address"><a href="mailto:samuel.steiner@renuo.ch">samuel.steiner@renuo.ch</a></div>
-
-<!--<blockquote>Den Kunden in das Zentrum der Zusammenarbeit rücken und damit Kosten senken, langfristige Werte
-    generieren und Freude bereiten.
-    <small>Samuel Steiner</small>
-</blockquote>-->
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -59,9 +49,4 @@ position: 3
       </tbody>
     </table>
   </div>
-</div>
-
-<div class="profile-social-links">
-  <a href="https://github.com/samuelsteiner"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
-  <a href="https://www.xing.com/profile/Samuel_Steiner3"><i title="Zum Xing Profil" class="icon-xing-sign icon-4x"></i></a>
 </div>
