--- a/src/documents/ueber-uns/simon-huber.html
+++ b/src/documents/ueber-uns/simon-huber.html
@@ -1,19 +1,14 @@
 ---
 name: Simon Huber
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: sihu
+xing: Simon_Huber22
 image: simon
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Engineer, B.Sc. HSR CS
+job_title_break: Web-Engineer, B.Sc. HSR CS
 tags: ['employee']
 position: 10
 ---
-
-<p>Web-Engineer, B.Sc. HSR CS<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -41,9 +36,4 @@ position: 10
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/sihu"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
-  <a href="https://www.xing.com/profile/Simon_Huber22"><i title="Zum Xing Profil"
-                                                          class="icon-xing-sign icon-4x"></i></a>
 </div>
