--- a/src/documents/ueber-uns/zora-fuchs.html
+++ b/src/documents/ueber-uns/zora-fuchs.html
@@ -1,19 +1,14 @@
 ---
 name: Zora Fuchs
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: zorafuchs
+xing:
 image: zora
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Developer, Eidg. FZ Informatikerin
+job_title_break: Web-Developer, Eidg. FZ Informatikerin
 tags: ['employee']
 position: 13
 ---
-
-<p>Web-Developer, Eidg. FZ Informatikerin<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -42,7 +37,4 @@ position: 13
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/zorafuchs"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
