--- a/src/documents/ueber-uns/alicia-rueegg.html
+++ b/src/documents/ueber-uns/alicia-rueegg.html
@@ -1,19 +1,14 @@
 ---
 name: Alicia Rüegg
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: aliciarueegg
+xing:
 image: alicia
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Developer
+job_title_break: Web-Developer
 tags: ['employee']
 position: 15
 ---
-
-<p>Web-Developer<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -37,7 +32,4 @@ position: 15
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/aliciarueegg"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
