--- a/src/documents/ueber-uns/benjamin-boehm.html
+++ b/src/documents/ueber-uns/benjamin-boehm.html
@@ -1,19 +1,14 @@
 ---
 name: Benjamin Böhm
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: benjaminbhm
+xing:
 image: benjamin
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Developer
+job_title_break: Web-Developer
 tags: ['employee']
 position: 17
 ---
-
-<p>Web-Developer<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -38,7 +33,4 @@ position: 17
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/benjaminbhm"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
