--- a/src/documents/ueber-uns/cyril-kyburz.html
+++ b/src/documents/ueber-uns/cyril-kyburz.html
@@ -1,19 +1,14 @@
 ---
 name: Cyril Kyburz
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: cyrilkyburz
+xing:
 image: cyril
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Developer, Eidg. FZ Informatiker
+job_title_break: Web-Developer, Eidg. FZ Informatiker
 tags: ['employee']
 position: 7
 ---
-
-<p>Web-Developer, Eidg. FZ Informatiker<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -41,7 +36,4 @@ position: 7
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/cyrilkyburz"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
