--- a/src/documents/ueber-uns/felix-kubli.html
+++ b/src/documents/ueber-uns/felix-kubli.html
@@ -1,19 +1,14 @@
 ---
 name: Felix Kubli
-github: XXXXXXXXXX
-xing: XXXXXXXXX
+github: felixkubli
+xing:
 image: felix
-email: XXXXXXXX
-job_title: XXXXXXXX
-job_title2: XXXXXXXX
-
+email:
+job_title: Web-Developer
+job_title_break: Web-Developer
 tags: ['employee']
 position: 16
 ---
-
-<p>Web-Developer<br/>
-
-  <br/>
 
 <div data-collapse>
   <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
@@ -38,7 +33,4 @@ position: 16
       </tbody>
     </table>
   </div>
-</div>
-<div class="profile-social-links">
-  <a href="https://github.com/felixkubli"><i title="Zum Github Profil" class="icon-github-sign icon-4x"></i></a>
 </div>
